# drawing_app_video

./: Cargo.toml  Dioxus.toml  README.md
.github/workflows/: gh_pages.yml
assets/: main.css
docs/: index.html
docs/assets/: main.css
docs/wasm/: drawing_app_video.d.ts  drawing_app_video.d.ts.br  drawing_app_video.js  drawing_app_video.js.br  drawing_app_video_bg.wasm  drawing_app_video_bg.wasm.br  drawing_app_video_bg.wasm.d.ts  drawing_app_video_bg.wasm.d.ts.br
docs/wasm/snippets/dioxus-interpreter-js-654dc4519bce26d0/: inline0.js  inline0.js.br
src/: app_state.rs  components.rs  drawing.rs  main.rs
src/components/: color_picker.rs  draw_canvas.rs  line_width_slider.rs  menu_bar.rs  mod.rs  tool_bar.rs
