[package]
name = "drawing_app_video"
version = "0.1.0"
authors = ["Marcos Esparza <maesparza@arizona.edu>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0" }
derive-getters = "0.5.0"
hsv = "0.1.1"
web-sys = {version ="0.3.76", features = [
  "HtmlCanvasElement", "CanvasRenderingContext2d", "HtmlAnchorElement", "ImageData"]}
enum-map = "2.7.3"
dyn-clone = "1.0.17"
downcast = "0.11.0"
dioxus-free-icons = { version = "0.9.0", features = ["lucide"] }


[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
